# jones

./: ChangeLog  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  version.m4
doc/: Makefile.am  Makefile.in  cmdline.txt  notes.txt  notes.txt~
src/: Makefile.OLD  Makefile.am  Makefile.in  a.jns  facts.c  facts.h  ipython.c  ipython.h  jones.c  jones.py  jones_const.h.in  kb.c  kb.h  lena.c  lena.h  list.c  list.h  objs.c  objs.h  old_jones.c  rules.c  rules.h  test.jns  test.py
